--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello world</h1>
     <h2>CatPhotoApp</h2>
-    <p>Hello Paragraph</p>
+    <p>kitty ipsum dolor sit amet consectetur adipisicing elit. Dolorum iste, excepturi, rem nihil, rerum quia consequuntur laborum id minus ut provident nam cumque maiores non esse inventore sunt nemo repellendus!</p>
     
 </body>
 </html>
