--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Practice</title>
-</head>
-<body>
-    <h1>Hello world</h1>
+  </head>
+  <body>
+    <!-- <h1>Hello world</h1>
     <h2>CatPhotoApp</h2>
-    <p>kitty ipsum dolor sit amet consectetur adipisicing elit. Dolorum iste, excepturi, rem nihil, rerum quia consequuntur laborum id minus ut provident nam cumque maiores non esse inventore sunt nemo repellendus!</p>
-    
-</body>
+    <p>
+      kitty ipsum dolor sit amet consectetur adipisicing elit. Dolorum iste,
+      excepturi, rem nihil, rerum quia consequuntur laborum id minus ut
+      provident nam cumque maiores non esse inventore sunt nemo repellendus!
+    </p> -->
+  </body>
 </html>
