--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>HTML Practice</title>
   </head>
   <body>
-    <!-- <h1>Hello world</h1>
+    <h1>Hello world</h1>
     <h2>CatPhotoApp</h2>
     <p>
       kitty ipsum dolor sit amet consectetur adipisicing elit. Dolorum iste,
       excepturi, rem nihil, rerum quia consequuntur laborum id minus ut
       provident nam cumque maiores non esse inventore sunt nemo repellendus!
-    </p> -->
+    </p>
   </body>
 </html>
