eight task commit

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <body>
     
     <h2>CatPhotoApp</h2>
+    <main>
     <p>
       kitty ipsum dolor sit amet consectetur adipisicing elit. Dolorum iste,
       excepturi, rem nihil, rerum quia consequuntur laborum id minus ut
       provident nam cumque maiores non esse inventore sunt nemo repellendus!
     </p>
+    <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+    </main>
   </body>
 </html>
