--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <h2>CatPhotoApp</h2>
     <main>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="cat photo ">
     <p>
       kitty ipsum dolor sit amet consectetur adipisicing elit. Dolorum iste,
       excepturi, rem nihil, rerum quia consequuntur laborum id minus ut
