--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h2>CatPhotoApp</h2>
     <main>
-        <a href="https://www.freecatphotoapp.com">Cat Photos</a>
+        <a href="https://www.freecatphotoapp.com" target="_blank">Cat Photos</a>
         <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="cat photo ">
     <p>
       kitty ipsum dolor sit amet consectetur adipisicing elit. Dolorum iste,
