--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <li>Fish</li>
           <li>Cheese</li>
       </ul>
+      <h3>What cat hates</h3>
+      <ol>
+          <li>Garfield</li>
+          <li>Sylvester</li>
+          <li>Spoiled foods</li>
+      </ol>
       
     </main>
     
