Seventeenth task commit ( created input text field)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <li>Sylvester</li>
           <li>Spoiled foods</li>
       </ol>
+
+      <h1>Lets create form</h1>
+      <input type="text">
       
     </main>
     
