Eighteenth task commit ( added url in placeholder)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </ol>
 
       <h1>Lets create form</h1>
-      <input type="text">
+      <input type="text" placeholder="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" >
       
     </main>
     
