twenty first task commit ( added required )

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <h1>Lets create form</h1>
       <form action="https://www.freecatphotoapp.com/submit-cat-photo">
-        <input type="text" placeholder="Cat photo url" />
+        <input type="text " required placeholder="Cat photo url" />
         <button type="submit">Submit</button>
       </form>
     </main>
