--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
       <form action="https://www.freecatphotoapp.com/submit-cat-photo">
         <input type="text " required placeholder="Cat photo url" />
         <button type="submit">Submit</button>
+        <label for="Indoor">
+            <input id="Indoor" type="radio" name="indoor-outdoor">Indoor
+        </label>
+        <label for="Outdoor">
+            <input id="Outdoor" type="radio" name="indoor-outdoor">Outdoor
+        </label>
       </form>
+     
     </main>
   </body>
 </html>
