twenty third task commit (checkbox added)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
         <label for="Outdoor">
             <input id="Outdoor" type="radio" name="indoor-outdoor">Outdoor
         </label>
+        <div>
+        <label for="loving">
+            <input type="checkbox" name="personality" id="loving">Loving
+        </label>
+        <label for="lazy">
+            <input type="checkbox" name="personality" id="lazy">Lazy
+        </label>
+        <label for="cuteness">
+            <input type="checkbox" name="personality" id="cuteness">Cuteness
+        </label>
+    </div>
       </form>
      
     </main>
