--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
         <input type="text " required placeholder="Cat photo url" />
         <button type="submit">Submit</button>
         <label for="Indoor">
-            <input id="Indoor" type="radio" name="indoor-outdoor">Indoor
+            <input id="indoor" value="indoor" type="radio" name="indoor-outdoor">Indoor
         </label>
-        <label for="Outdoor">
-            <input id="Outdoor" type="radio" name="indoor-outdoor">Outdoor
+        <label for="outdoor">
+            <input id="outdoor" value = "outdoor"type="radio" name="indoor-outdoor">Outdoor
         </label>
         <div>
         <label for="loving">
-            <input type="checkbox" name="personality" id="loving">Loving
+            <input type="checkbox"value="loving" name="personality" id="loving">Loving
         </label>
         <label for="lazy">
-            <input type="checkbox" name="personality" id="lazy">Lazy
+            <input type="checkbox"value="lazy" name="personality" id="lazy">Lazy
         </label>
         <label for="cuteness">
-            <input type="checkbox" name="personality" id="cuteness">Cuteness
+            <input type="checkbox"value="cuteness" name="personality" id="cuteness">Cuteness
         </label>
     </div>
       </form>
