twenty fifth task commit ( added default checked)

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <input type="text " required placeholder="Cat photo url" />
         <button type="submit">Submit</button>
         <label for="Indoor">
-            <input id="indoor" value="indoor" type="radio" name="indoor-outdoor">Indoor
+            <input id="indoor" value="indoor" type="radio" name="indoor-outdoor" checked>Indoor
         </label>
         <label for="outdoor">
             <input id="outdoor" value = "outdoor"type="radio" name="indoor-outdoor">Outdoor
         </label>
         <div>
         <label for="loving">
-            <input type="checkbox"value="loving" name="personality" id="loving">Loving
+            <input type="checkbox"value="loving" name="personality" id="loving" checked>Loving
         </label>
         <label for="lazy">
             <input type="checkbox"value="lazy" name="personality" id="lazy">Lazy
