twenty sixth  task commit ( added div to ul and ol)

--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
           alt="Cat Photo"
         /><br />Cat Photos</a
       >
-
+      <div>
       <h3>What cat loves</h3>
       <ul>
         <li>Milk</li>
         <li>Fish</li>
         <li>Cheese</li>
       </ul>
+      </div>
+      <div>
       <h3>What cat hates</h3>
       <ol>
         <li>Garfield</li>
         <li>Sylvester</li>
         <li>Spoiled foods</li>
       </ol>
+      </div>
 
       <h1>Lets create form</h1>
       <form action="https://www.freecatphotoapp.com/submit-cat-photo">
