twenty eight task commit

--- a/new.html
+++ b/new.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <h1>Doctype created</h1> 
+    <head>
+        <title>
+            Practice
+
+        </title>
+    </head>
+    <body>
+        <h1>This is HEADING 1</h1>
+        <p>This is paragraph</p>
+    </body>
+    
 
 </html>
